--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         }
 
         .logo {
-            width: 80px;
-            height: 80px;
-            margin: 0 auto 2rem;
+            width: 220px;
+            height: 220px;
+            margin: 0 auto 3rem;
             opacity: 0;
             animation: fadeIn 1s ease-out 0.3s forwards;
         }
@@ -53,7 +53,7 @@
         }
 
         .hosted-text {
-            font-size: 0.95rem;
+            font-size: 1.3rem;
             color: rgba(255, 255, 255, 0.5);
             margin-bottom: 0.8rem;
             opacity: 0;
@@ -61,11 +61,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 0.5rem;
+            gap: 0.8rem;
         }
 
         .skool-logo {
-            height: 18px;
+            height: 45px;
             width: auto;
             opacity: 0.8;
         }
@@ -118,9 +118,13 @@
             }
             
             .logo {
-                width: 60px;
-                height: 60px;
-                margin-bottom: 1.5rem;
+                width: 160px;
+                height: 160px;
+                margin-bottom: 2rem;
+            }
+
+            .skool-logo {
+                height: 35px;
             }
         }
     </style>
