--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         }
 
         .logo {
-            width: 220px;
-            height: 220px;
+            width: 360px;
+            height: 360px;
             margin: 0 auto 3rem;
             opacity: 0;
             animation: fadeIn 1s ease-out 0.3s forwards;
@@ -53,7 +53,7 @@
         }
 
         .hosted-text {
-            font-size: 1.3rem;
+            font-size: 1.7rem;
             color: rgba(255, 255, 255, 0.5);
             margin-bottom: 0.8rem;
             opacity: 0;
@@ -61,11 +61,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 0.8rem;
+            gap: 1.2rem;
         }
 
         .skool-logo {
-            height: 45px;
+            height: 95px;
             width: auto;
             opacity: 0.8;
         }
@@ -118,13 +118,17 @@
             }
             
             .logo {
-                width: 160px;
-                height: 160px;
+                width: 240px;
+                height: 240px;
                 margin-bottom: 2rem;
             }
 
             .skool-logo {
-                height: 35px;
+                height: 65px;
+            }
+
+            .hosted-text {
+                font-size: 1.4rem;
             }
         }
     </style>
