--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
-            padding: 2rem;
+            padding: 4rem 2rem 2rem 2rem;
             -webkit-font-smoothing: antialiased;
         }
 
