--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         
         <p class="cta-text">Ready to ascend?</p>
         
-        <a href="https://www.skool.com/HOMEUniversity" class="join-button">Join Now</a>
+        <a href="https://www.skool.com/homeuniversity" class="join-button">Join Now</a>
     </div>
 </body>
 </html>
