--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOMEUniversity - Free Consciousness Framework</title>
+    <title>HOMEUniversity</title>
     <style>
         * {
             margin: 0;
@@ -15,40 +15,68 @@
             font-family: 'Georgia', serif;
             background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
             color: #2c3e50;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 2rem;
+            line-height: 1.7;
         }
 
-        .container {
-            text-align: center;
-            max-width: 700px;
+        /* TOP NAV */
+        nav {
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 1.5rem 0;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.03);
+        }
+
+        .nav-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .logo {
-            width: 200px;
-            height: 200px;
-            margin: 0 auto 3rem;
-            opacity: 0;
-            animation: fadeIn 1s ease-out 0.3s forwards;
+            font-size: 1.3rem;
+            font-weight: 300;
+            letter-spacing: 0.15em;
+            color: #2c3e50;
         }
 
-        .logo img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
+        .nav-links {
+            display: flex;
+            gap: 2rem;
+        }
+
+        .nav-links a {
+            color: #7f8c8d;
+            text-decoration: none;
+            font-size: 0.9rem;
+            letter-spacing: 0.05em;
+            transition: color 0.3s;
+        }
+
+        .nav-links a:hover {
+            color: #2c3e50;
+        }
+
+        /* MAIN CONTENT */
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 8rem 2rem 4rem;
         }
 
         h1 {
-            font-size: 4rem;
+            font-size: 3.5rem;
             font-weight: 300;
-            letter-spacing: 0.1em;
+            letter-spacing: 0.05em;
             margin-bottom: 1.5rem;
-            opacity: 0;
-            animation: fadeIn 1s ease-out 0.5s forwards;
+            color: #2c3e50;
         }
 
         .tagline {
@@ -56,8 +84,36 @@
             color: #7f8c8d;
             margin-bottom: 3rem;
             line-height: 1.8;
-            opacity: 0;
-            animation: fadeIn 1s ease-out 0.7s forwards;
+        }
+
+        .course-overview {
+            background: rgba(255, 255, 255, 0.6);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(0, 0, 0, 0.05);
+            border-radius: 12px;
+            padding: 2.5rem;
+            margin-bottom: 3rem;
+        }
+
+        .course-overview h2 {
+            font-size: 1.8rem;
+            font-weight: 400;
+            margin-bottom: 1rem;
+        }
+
+        .phase-list {
+            list-style: none;
+            margin: 1.5rem 0;
+        }
+
+        .phase-list li {
+            padding: 0.8rem 0;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+            color: #555;
+        }
+
+        .phase-list li:last-child {
+            border-bottom: none;
         }
 
         .cta-button {
@@ -70,8 +126,6 @@
             font-weight: 500;
             border-radius: 30px;
             transition: all 0.3s;
-            opacity: 0;
-            animation: fadeIn 1s ease-out 0.9s forwards;
             letter-spacing: 0.05em;
             box-shadow: 0 4px 20px rgba(102, 126, 234, 0.3);
         }
@@ -81,85 +135,54 @@
             box-shadow: 0 6px 30px rgba(102, 126, 234, 0.4);
         }
 
-        .secondary-link {
-            display: block;
-            margin-top: 1.5rem;
-            color: #7f8c8d;
-            text-decoration: none;
-            font-size: 0.95rem;
-            opacity: 0;
-            animation: fadeIn 1s ease-out 1.1s forwards;
-        }
-
-        .secondary-link:hover {
-            color: #2c3e50;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
         @media (max-width: 768px) {
             h1 {
                 font-size: 2.5rem;
             }
 
-            .logo {
-                width: 150px;
-                height: 150px;
-            }
-
-            .tagline {
-                font-size: 1.1rem;
+            .nav-links {
+                display: none;
             }
         }
     </style>
 </head>
 <body>
+    <!-- TOP NAV -->
+    <nav>
+        <div class="nav-content">
+            <div class="logo">HOMEUNIVERSITY</div>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="level0.html">The Course</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- MAIN CONTENT -->
     <div class="container">
-        <!-- OPTIONAL: If you have a logo image -->
-        <!-- <div class="logo">
-            <img src="images/logo.png" alt="HOMEUniversity">
-        </div> -->
-
         <h1>HOMEUniversity</h1>
-
+        
         <p class="tagline">
             A free framework for consciousness, sovereignty, and truth.<br>
             Built during activation. Take what serves you.
         </p>
 
-        <a href="welcome.html" class="cta-button">Enter →</a>
+        <div class="course-overview">
+            <h2>The Course</h2>
+            <p>15 levels. 3 phases. Sequential awakening protocol.</p>
+            
+            <ul class="phase-list">
+                <li><strong>Phase 1: Foundation</strong> — Levels 0-5 (Vessel optimization, discernment, power)</li>
+                <li><strong>Phase 2: Consciousness</strong> — Levels 6-8 (What is consciousness, alchemy, manifestation)</li>
+                <li><strong>Phase 3: Integration</strong> — Levels 9-14 (Coming soon)</li>
+            </ul>
 
-        <a href="module0.html" class="secondary-link">Skip to Module 0</a>
+            <p style="margin-top: 1.5rem; color: #7f8c8d;">
+                Each level builds on the previous. You can't skip. Start at Level 0.
+            </p>
+        </div>
+
+        <a href="level0.html" class="cta-button">Start Level 0 →</a>
     </div>
 </body>
 </html>
-```
-
----
-
-## UPLOAD THIS STRUCTURE
-
-**YOUR GITHUB REPO SHOULD LOOK LIKE THIS:**
-```
-your-repo-name/
-│
-├── index.html (NEW - replace with code above)
-├── welcome.html (your onboarding doc)
-├── module0.html (your Module 0)
-├── module1.html
-├── ...
-│
-├── css/
-│   └── style.css (the CSS I gave you before)
-│
-└── images/ (optional)
-    └── logo.png
