--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         </div>
     </header>
 
-    <!-- HERO -->
+    <!-- MAIN -->
     <main class="home-main">
+        <!-- HERO -->
         <section class="hero">
             <div class="hero-inner">
                 <h1>HOMEUniversity</h1>
@@ -49,6 +50,7 @@
             </p>
 
             <div class="phase-grid">
+                <!-- PHASE 1 -->
                 <div class="phase-card">
                     <h3>Phase 1: Foundation</h3>
                     <p class="phase-range">Levels 0–5</p>
@@ -65,6 +67,7 @@
                     </ul>
                 </div>
 
+                <!-- PHASE 2 -->
                 <div class="phase-card">
                     <h3>Phase 2: Consciousness</h3>
                     <p class="phase-range">Levels 6–8</p>
@@ -78,6 +81,7 @@
                     </ul>
                 </div>
 
+                <!-- PHASE 3 -->
                 <div class="phase-card disabled">
                     <h3>Phase 3: Integration</h3>
                     <p class="phase-range">Levels 9–14</p>
@@ -91,7 +95,7 @@
             </div>
 
             <p class="course-note">
-                You’re not here to binge information. You’re here to **rebuild** your baseline.
+                You’re not here to binge information. You’re here to <strong>rebuild</strong> your baseline.
             </p>
         </section>
     </main>
